리뷰/원룸 수정 시 이미지 삭제 기능, 이미지 출력

--- a/static/css/normalUserMainTemplate.scss
+++ b/static/css/normalUserMainTemplate.scss
@@ -6,6 +6,9 @@ div#rightSideMenu{
     width:30%;
     height:100px;
 }
+.bx-wrapper{
+    height:36vh;
+}
 .slider>div{
     height:35vh;
     min-height:204px;
