--- a/static/css/normalUserReviewSearchTemplate.scss
+++ b/static/css/normalUserReviewSearchTemplate.scss
@@ -108,24 +108,28 @@ div#written_date_selects_div{
   height:25%;
   line-height:1;
   margin-bottom:8%;
+  margin-top:4%;
 }
 #soundproof{
   width:100%;
   height:25%;
   line-height:1;
   margin-bottom:8%;
+  margin-top:4%;
 }
 #lighting{
   width:100%;
   height:25%;
   line-height:1;
   margin-bottom:8%;
+  margin-top:4%;
 }
 #cleanliness{
   width:100%;
   height:25%;
   line-height:1;
   margin-bottom:8%;
+  margin-top:4%;
 }
 
 .sliders_control {
@@ -170,8 +174,8 @@ input[type=range]::-webkit-slider-thumb:active {
 input[type="number"] {
   color: #8a8383;
   width: 50px;
-  height: 30px;
-  font-size: 20px;
+  height: 20px;
+  font-size: 15px;
   border: none;
   -moz-appearance: textfield;
   text-align:center;
@@ -190,6 +194,14 @@ input[type="range"] {
   position: absolute;
   background-color: #C6C6C6;
   pointer-events: none;
+}
+#scores{
+  margin-top:10%;
+  margin-left:2.94%;
+}
+#score-filters{
+  height:27.27%;
+  width:27%;
 }
 #humidityFromSlider {
   height: 0;
