--- a/templates/normal_user_review_search.html
+++ b/templates/normal_user_review_search.html
@@ -106,11 +106,11 @@
                 </div>
                 <div class="form_control">
                     <div class="form_control_container">
-                        <div class="form_control_container__time" style="height:50%;">최소</div>
+                        <div class="form_control_container__time" style="height:50%;">최소 점수</div>
                         <input class="form_control_container__time__input" style="height:50%;" readonly type="number" id="humidityFromInput" value="1" min="1" max="5"/>
                     </div>
                     <div class="form_control_container">
-                        <div class="form_control_container__time" style="height:50%;">최대</div>
+                        <div class="form_control_container__time" style="height:50%;">최대 점수</div>
                         <input class="form_control_container__time__input" style="height:50%;" readonly type="number" id="humidityToInput" value="5" min="1" max="5"/>
                     </div>
                 </div>
@@ -125,11 +125,11 @@
                 </div>
                 <div class="form_control">
                     <div class="form_control_container">
-                        <div class="form_control_container__time" style="height:50%;">최소 거리</div>
+                        <div class="form_control_container__time" style="height:50%;">최소 점수</div>
                         <input class="form_control_container__time__input" style="height:50%;" readonly type="number" id="soundproofFromInput" value="1" min="1" max="5"/>
                     </div>
                     <div class="form_control_container">
-                        <div class="form_control_container__time" style="height:50%;">최대 거리</div>
+                        <div class="form_control_container__time" style="height:50%;">최대 점수</div>
                         <input class="form_control_container__time__input" style="height:50%;" readonly type="number" id="soundproofToInput" value="5" min="1" max="5"/>
                     </div>
                 </div>
@@ -144,11 +144,11 @@
                 </div>
                 <div class="form_control">
                     <div class="form_control_container">
-                        <div class="form_control_container__time" style="height:50%;">최소 거리</div>
+                        <div class="form_control_container__time" style="height:50%;">최소 점수</div>
                         <input class="form_control_container__time__input" style="height:50%;" readonly type="number" id="lightingFromInput" value="1" min="1" max="5"/>
                     </div>
                     <div class="form_control_container">
-                        <div class="form_control_container__time" style="height:50%;">최대 거리</div>
+                        <div class="form_control_container__time" style="height:50%;">최대 점수</div>
                         <input class="form_control_container__time__input" style="height:50%;" readonly type="number" id="lightingToInput" value="5" min="1" max="5"/>
                     </div>
                 </div>
@@ -163,11 +163,11 @@
                 </div>
                 <div class="form_control">
                     <div class="form_control_container">
-                        <div class="form_control_container__time" style="height:50%;">최소 거리</div>
+                        <div class="form_control_container__time" style="height:50%;">최소 점수</div>
                         <input class="form_control_container__time__input" style="height:50%;" readonly type="number" id="cleanlinessFromInput" value="1" min="1" max="5"/>
                     </div>
                     <div class="form_control_container">
-                        <div class="form_control_container__time" style="height:50%;">최대 거리</div>
+                        <div class="form_control_container__time" style="height:50%;">최대 점수</div>
                         <input class="form_control_container__time__input" style="height:50%;" readonly type="number" id="cleanlinessToInput" value="5" min="1" max="5"/>
                     </div>
                 </div>
@@ -185,7 +185,7 @@
             </div>
             <div id="submit-div">
                 <a href="javascript:(0)" onclick="document.getElementById('search_filter').submit();" id="submit">적용</a>
-            </div>
+            </div><br><br>
             <script>
                 a=(document.getElementById('submit-div').offsetHeight/16).toString()+'rem';
                 document.getElementById('submit').style.fontSize=a;
