--- a/static/css/normalUserMainTemplate.css
+++ b/static/css/normalUserMainTemplate.css
@@ -7,6 +7,10 @@ div#rightSideMenu {
   height: 100px;
 }
 
+.bx-wrapper {
+  height: 36vh;
+}
+
 .slider > div {
   height: 35vh;
   min-height: 204px;
