--- a/static/css/normalUserReviewReadTemplate.css
+++ b/static/css/normalUserReviewReadTemplate.css
@@ -1,5 +1,7 @@
 #reviewHead {
   height: 220px;
+  border-bottom: 2px solid #B3B3B3;
+  margin-bottom: 2%;
 }
 
 #reviewContent {
@@ -166,6 +168,13 @@
   text-align: center;
 }
 
+#rec {
+  display: flex;
+  align-content: center;
+  justify-items: center;
+  height: 100%;
+}
+
 #rep_icon {
   border-right: 1px solid #B3B3B3;
   display: inline-block;
@@ -180,6 +189,13 @@
   height: 100%;
   width: 30.9%;
   text-align: center;
+}
+
+#rep {
+  display: flex;
+  align-content: center;
+  justify-items: center;
+  height: 100%;
 }
 
 /*# sourceMappingURL=normalUserReviewReadTemplate.css.map */
