--- a/static/css/normalUserReviewReadTemplate.scss
+++ b/static/css/normalUserReviewReadTemplate.scss
@@ -1,6 +1,8 @@
 @import "color.scss";
 #reviewHead{
     height:220px;
+    border-bottom:2px solid #B3B3B3;
+    margin-bottom:2%;
 }
 
 #reviewContent{
@@ -140,6 +142,12 @@
     width:30.9%;
     text-align:center;
 }
+#rec{
+    display:flex;
+    align-content:center;
+    justify-items:center;
+    height:100%;
+}
 #rep_icon{
     border-right:1px solid #B3B3B3;
     display:inline-block;
@@ -153,4 +161,10 @@
     height:100%;
     width:30.9%;
     text-align:center;
+}
+#rep{
+    display:flex;
+    align-content:center;
+    justify-items:center;
+    height:100%;
 }
