--- a/static/css/normalUserRoomReadTemplate.css
+++ b/static/css/normalUserRoomReadTemplate.css
@@ -4,7 +4,8 @@
 }
 
 #mid {
-  outline: 2px solid #B3B3B3;
+  border-top: 2px solid #B3B3B3;
+  border-bottom: 2px solid #B3B3B3;
   width: 100%;
   height: 11.1%;
 }
@@ -29,10 +30,6 @@
 
 #mainDiv::-webkit-scrollbar-track {
   background-color: #FFFFFF;
-}
-
-#reviews_div {
-  height: 100%;
 }
 
 /*# sourceMappingURL=normalUserRoomReadTemplate.css.map */
