--- a/static/css/normalUserRoomReadTemplate.scss
+++ b/static/css/normalUserRoomReadTemplate.scss
@@ -4,7 +4,9 @@
   width:100%;
 }
 #mid{
-  outline:2px solid #B3B3B3;width:100%;
+  border-top:2px solid #B3B3B3;
+  border-bottom:2px solid #B3B3B3;
+  width:100%;
   height:11.1%
 }
 #mainDiv{
@@ -24,7 +26,4 @@
 }
 #mainDiv::-webkit-scrollbar-track{
   background-color:#FFFFFF;
-}
-#reviews_div {
-  height: 100%;
 }
