--- a/static/css/normalUserRoomWriteTemplate.scss
+++ b/static/css/normalUserRoomWriteTemplate.scss
@@ -1,9 +1,21 @@
 #tr1 {
   outline: solid 2px #B3B3B3;
-  height: 100%;
+  height: 10%;
   width: 100%;
   display: flex;
   padding: 1.5% 6.25% 1.5% 6.25%;
+}
+#tr2{
+    display:inline-block;
+    float:left;
+    height: 100%;
+    width: 60%;
+}
+#tr3{
+    display:inline-block;
+    float:left;
+    height: 89.39%;
+    width: 40%;
 }
 img{
     width:100%;
@@ -12,14 +24,47 @@ img{
     float: left;
     padding-right:20%;
 }
-.image-preview{
-    width: 100%;
+#image-preview{
+    position:relative;
+    display:inline-block;
+    width: 49%;
     height: 100%;
-    display: flex;
-    float: left;
     overflow-x:scroll;
+    overflow-y:hidden;
+    white-space:nowrap;
 }
-.image-preview>div{
-  flex:0 0 60%;
-  flex-wrap:nowrap;
+#image-preview::-webkit-scrollbar{
+  width:9px;
+}
+#image-preview::-webkit-scrollbar-thumb{
+  width:3px;
+  background-color:#C6C6C6;
+  background-clip:padding-box;
+  border:3px solid transparent;
+  border-radius:12px;
+}
+#image-preview::-webkit-scrollbar-track{
+  background-color:#FFFFFF;
+}
+#current-image-preview{
+    position:relative;
+    display:inline-block;
+    width: 49%;
+    height: 100%;
+    overflow-x:scroll;
+    overflow-y:hidden;
+    white-space:nowrap;
+}
+#current-image-preview::-webkit-scrollbar{
+  width:9px;
+}
+#current-image-preview::-webkit-scrollbar-thumb{
+  width:3px;
+  background-color:#C6C6C6;
+  background-clip:padding-box;
+  border:3px solid transparent;
+  border-radius:12px;
+}
+#current-image-preview::-webkit-scrollbar-track{
+  background-color:#FFFFFF;
 }
