--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>리뷰 작성 및 요약 분석</title>
+    <title>원룸 리뷰 작성 및 분석 플랫폼</title>
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap" rel="stylesheet">
     <link href="{% static 'css/baseTemplate.css' %}" rel="stylesheet" type="text/css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
