--- a/templates/normal_user_login.html
+++ b/templates/normal_user_login.html
@@ -35,7 +35,7 @@
 <div id="sign_up">
     <div>
         <div style="margin-bottom:5%;">
-            <a style="width:100%;" type="button" href="{% url 'social:begin' 'kakao' %}?next={{ signup }}"><img style="width:100%;" src="{% static 'images/logo/kakao_login_large_wide.png' %}"></a>
+            <a style="width:100%; height:100%;" type="button" href="{% url 'social:begin' 'kakao' %}?next={{ signup }}"><img style="width:100%; height:100%;" src="{% static 'images/logo/kakao_login_large_wide.png' %}"></a>
         </div>
         <div id="to_main" style="cursor:pointer; border:2px solid #A23355;" onclick="location.href = '/'">메인 페이지로 이동하기</div>
     </div>
