--- a/templates/normal_user_review_read.html
+++ b/templates/normal_user_review_read.html
@@ -12,7 +12,11 @@
 <div id="reviewHead" style = "height:32.8%; ">
     <div style ="margin:15px; height:100%">
         <div id="review_image" style="width:24.7%; height:90.7%; margin-right:20px; display: inline-block;float:left;">
-            <img src="{% static 'images/reviewImage/' %}{{review.representiveImage|defaultImage:'review'}}" style="width:100%; height:100%;">
+            {% if review.additionalImage|length > 0 %}
+                <img src="{% static 'images/reviewImage/' %}{{review.additionalImage|first|defaultImage:'review'}}" style="width:100%; height:100%;">
+            {% else %}
+                <img src="{% static 'images/reviewImage/no-photo.png' %}" style="width:100%; height:100%;">
+            {% endif %}
         </div>
         <div id="mapDiv" style = "display:inline-block;"></div>
         <script>
@@ -223,7 +227,13 @@
         </div>
         <div id="rec_rep">
             <div id="rec_icon">
-                <a onclick="toggleRecommend()" href="javascript:void(0);"><img id="rec" src="{% static 'images/iconImage/' %}recommend.png"></a>
+                <a onclick="toggleRecommend()" href="javascript:void(0);">
+                    {% if recommended %}
+                        <img id="rec" src="{% static 'images/iconImage/' %}recommended.png">
+                    {% else %}
+                        <img id="rec" src="{% static 'images/iconImage/' %}recommend.png">
+                    {% endif %}
+                </a>
             </div>
             <div id="rec_button">
                 <div style="display:flex; align-items:center; justify-content:center; height:100%; width:100%;">
@@ -231,7 +241,13 @@
                 </div>
             </div>
             <div id="rep_icon">
-                <a onclick="toggleReport()" href="javascript:void(0);"><img id="rep" src="{% static 'images/iconImage/' %}report.png"></a>
+                <a onclick="toggleReport()" href="javascript:void(0);">
+                    {% if reported %}
+                        <img id="rep" src="{% static 'images/iconImage/' %}reported.png">
+                    {% else %}
+                        <img id="rep" src="{% static 'images/iconImage/' %}report.png">
+                    {% endif %}
+                </a>
             </div>
             <div id="rep_button">
                 <div style="display:flex; align-items:center; justify-content:center; height:100%; width:100%;">
@@ -241,8 +257,12 @@
         </div>
     </div>
 </div>
-    <br>
-    <div>해당 리뷰와 같은 주소의 다른 리뷰</div>
+<br>
+<div style="border-top:2px solid #B3B3B3;">
+    <div id="other_reviews_title" style="display:flex; margin-left:17.5%; margin-top:4%; align-content: center; justify-content: center; font-weight:bolder; width:65%; height:8%;">
+        해당 리뷰와 같은 주소의 다른 리뷰
+    </div>
+</div>
 <br>
 <script>var is_writer = {{is_writer}};</script>
 <link rel="stylesheet" href="{% static 'css/normalUserReviewReadTemplate.css' %}">
