--- a/templates/normal_user_room_search.html
+++ b/templates/normal_user_room_search.html
@@ -17,8 +17,6 @@
                 <div id="common_info_selects">
                     <label><input type="checkbox" name="color" value="blue">주차장</label>
                     <label><input type="checkbox" name="color" value="red">엘레베이터</label>
-                    <label><input type="checkbox" name="color" value="blue">CCTV</label>
-                    <label></label>
                 </div>
             </div>
             <div id="built_year_form">
@@ -32,7 +30,7 @@
                         <select id="builtTo" name="builtTo"></select>
                     </div>
                 </div>
-            </div>
+            </div><br>
             <div id="distance">
                 <div id="distance_title">
                     학교까지 거리(100m)
@@ -63,15 +61,15 @@
                 </div>
                 <div class="form_control">
                     <div class="form_control_container">
-                        <div class="form_control_container__time" style="height:50%;">최소 거리</div>
+                        <div class="form_control_container__time" style="height:50%;">최소 개수</div>
                         <input class="form_control_container__time__input" style="height:50%;" readonly type="number" id="fromInput2" value="1" min="1" max="10"/>
                     </div>
                     <div class="form_control_container">
-                        <div class="form_control_container__time" style="height:50%;">최대 거리</div>
+                        <div class="form_control_container__time" style="height:50%;">최대 개수</div>
                         <input class="form_control_container__time__input" style="height:50%;" readonly type="number" id="toInput2" value="10" min="1" max="10"/>
                     </div>
                 </div>
-            </div>
+            </div><br>
             <div id="text_form">
                 <div id="search_address">검색할 주소</div>
                 <div id="address_filter">
@@ -80,7 +78,7 @@
             </div>
             <div id="submit-div">
                 <a href="javascript:(0)" onclick="document.getElementById('search_filter').submit();" id="submit">적용</a>
-            </div>
+            </div><br><br>
         </form>
     </div>
 {% endblock %}
@@ -95,7 +93,11 @@
                 <div class="room" onclick="window.location.replace('{{roomRead}}?roomId={{room.id}}')"
                      style="cursor: pointer">
                     <div class="image">
-                        <img src="{% static 'images/roomImage/' %}{{room.roomImage|first|defaultImage:'room'}}" style="width:100%; height:100%;">
+                        {% if room.roomImage|length > 0 %}
+                            <img src="{% static 'images/roomImage/' %}{{room.roomImage|first|defaultImage:'room'}}" style="height:100%; width:100%;">
+                        {% else %}
+                            <img src="{% static 'images/roomImage/no-photo.png' %}" style="height:100%; width:100%;">
+                        {% endif %}
                     </div>
                     <div class="info">
                         <div class="room_address">
