--- a/templates/normal_user_room_write.html
+++ b/templates/normal_user_room_write.html
@@ -5,76 +5,115 @@
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
 
-    <form id="room" style ="width:100%;height:10%;" action="#" method="post" enctype="multipart/form-data">
+    <form id="room" style ="width:100%;height:100%;" action="#" method="post" enctype="multipart/form-data">
     {% csrf_token %}
         <div id="tr1">
-                <div style="background-color: #A23355 ; color: white; height:100%; width: 10.61% ;
-                        text-align: center; margin: 0 auto" id="room_address">주소</div>
-                <input id="id_address" style="float: right; border-color: #A23355; height:100%;
-                        flex:1" name="room_address" required>
-                <div style="background-color: #A23355 ; color: white; height:100%; width: 10.61% ;
-                        text-align: center; margin: 0 auto" id="postcode">우편번호</div>
-                <input id="id_postcode" style="float: right; border-color: #A23355; width:20%; height:100%;" name="postcode" required>
-            </div>
-        <div id="tr2">
-            <div style ="width:48%; height:100%; display: inline-block;float:left;">
-                <div style ="width:100%;height:45%;display: inline-block;">
-                    <span style ="margin-left:1%;font-weight: 700; font-size:25px;">원룸 정보</span>
-                    <br><label style ="margin-top:2.5%;margin-left: 5%;width:20%;"><input id="commonInfo0" type="checkbox" name = "commonInfo" style="margin-right:5%;">주차장</label>
-                    <label style ="width:40%;margin-left: 2.5%;"><input type="checkbox" id="commonInfo1"  name = "commonInfo" style="margin-right:5%;">엘레베이터</label>
-                    <br><label style ="width:100%;margin-left: 2.5%;margin-top:2.5%;">원룸 이름 &nbsp; <input id="id_name" name="name" style="height:25px;" type ="text"></label>
-                    <br><label style ="width:100%;margin-left: 2.5%;margin-top:2.5%;">건축 연도 &nbsp; <input id="id_builtYear" name="builtYear" style ="width:20%;height:25px;text-align: center;"type="number" minlength="1900" maxlength="2022" >&nbsp;년도</label>
-                    <br><label style ="width:100%;margin-left: 2.5%;margin-top:2.5%;">건물 높이 &nbsp; <input id="id_buildingFloorNum" name="buildingFloorNum" style ="width:15%;height:25px;text-align: center;"type ="number" minlength="-1" maxlength="10">&nbsp;층</label>
-                </div>
-                <div style ="width:100%;height:55%;">
-                    <span style ="margin-left:1%;font-weight: 700; font-size:25px; display: inline-block;">임대인 정보</span>
-                    <br><label style ="width:100%;margin-left: 2.5%;margin-top:2.5%;">연락처 &nbsp;<input id="id_ownerPhone" name="ownerPhone" style =" margin-left:3%;width:40%; height:25px;text-align: center;"type ="tel"></label>
-                </div>
-            </div>
-            <div style ="width:48%; height:100%;">
-                <div style ="padding-top: 3.038%; width:80%;height:70%;">
-                    <div class="image-preview"></div> {# 업로드한 이미지 띄우는 부분 #}
-                </div>
-                <div style="float: right">
-                    <input style ="width:60%;" type="file" class="real-upload" accept="image/*" multiple id="images" name="images">
-                    <input id="room_submit" value="원룸 등록" type="submit" style="background-color: #A4A1A1; border-color:#888888;
-                    color: white">
+            <div style="background-color: #A23355 ; color: white; height:100%; width: 10.61% ;
+                    text-align: center; margin: 0 auto" id="room_address">주소</div>
+            <input id="id_address" style="float: right; border-color: #A23355; height:100%;
+                    flex:1" name="room_address" required>
+            <div style="background-color: #A23355 ; color: white; height:100%; width: 10.61% ;
+                    text-align: center; margin: 0 auto" id="postcode">우편번호</div>
+            <input id="id_postcode" style="float: right; border-color: #A23355; width:20%; height:100%;" name="postcode" required>
+        </div>
+        <div style="height:90%; width:100%; position:relative;">
+            <div id="tr2">
+                <div style ="width:48%; height:100%; display: inline-block;float:left;">
+                    <div style ="width:100%;height:45%;display: inline-block;">
+                        <span style ="margin-left:1%;font-weight: 700; font-size:25px;">원룸 정보</span>
+                        <br><label style ="margin-top:2.5%;margin-left: 5%;width:20%;"><input id="commonInfo0" type="checkbox" name = "commonInfo" style="margin-right:5%;">주차장</label>
+                        <label style ="width:40%;margin-left: 2.5%;"><input type="checkbox" id="commonInfo1"  name = "commonInfo" style="margin-right:5%;">엘레베이터</label>
+                        <br><label style ="width:100%;margin-left: 2.5%;margin-top:2.5%;">원룸 이름 &nbsp; <input id="id_name" name="name" style="height:25px;" type ="text"></label>
+                        <br><label style ="width:100%;margin-left: 2.5%;margin-top:2.5%;">건축 연도 &nbsp; <input id="id_builtYear" name="builtYear" style ="width:20%;height:25px;text-align: center;"type="number" minlength="1900" maxlength="2022" >&nbsp;년도</label>
+                        <br><label style ="width:100%;margin-left: 2.5%;margin-top:2.5%;">건물 높이 &nbsp; <input id="id_buildingFloorNum" name="buildingFloorNum" style ="width:15%;height:25px;text-align: center;"type ="number" minlength="-1" maxlength="10">&nbsp;층</label>
+                    </div>
+                    <div style ="width:100%;height:55%;">
+                        <span style ="margin-left:1%;font-weight: 700; font-size:25px; display: inline-block;">임대인 정보</span>
+                        <br><label style ="width:100%;margin-left: 2.5%;margin-top:2.5%;">연락처 &nbsp;<input id="id_ownerPhone" name="ownerPhone" style =" margin-left:3%;width:40%; height:25px;text-align: center;"type ="tel"></label>
+                    </div>
                 </div>
             </div>
-            <input type="number" id="distance" hidden>
+            <div id="tr3">
+                <div style="padding-top: 3.038%; height:20%; width:100%;">
+                    <div id="image-preview"></div> {# 업로드한 이미지 띄우는 부분 #}
+                    <div id="current-image-preview"></div> {# 기존 이미지 띄우는 부분 #}
+                    <div style="display:flex; justify-content: right; width:100%;">
+                        <input style="display:none;" type="file" class="real-upload" accept="image/*" multiple id="images" name="images">
+                        <div style="display:inline-block; width:50%;" onclick="document.getElementById('images').click()"><span style="border:1px solid black; padding:1%;">사진 추가</span><span id="image_count" style="width:30%; float:right;">사진 0개</span></div>
+                        <input id="review_submit" value="리뷰 등록" type="submit" style="background-color: #A4A1A1; border-color:#888888;
+                        color: white">
+                    </div>
+                </div>
+            </div>
         </div>
     </form>
     <script type="text/javascript" src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey={{javakey|java_key}}&libraries=services&autoload=true"></script>
     <script>
+        var new_images = new DataTransfer();
+        var image_names = [];
 
         // 이미지 업로드
+        function removeImage(s, t){
+            image_names = image_names.filter((element) => element !== s);
+            for (i=0;i<new_images.files.length;i++){
+                if (new_images.files[i].name.indexOf(s) !== -1)
+                {
+                    let dataTransfer = new DataTransfer();
+                    let files = new_images.files;
+                    let fileArray = Array.from(files);
+                    fileArray.splice(i, 1);
+                    fileArray.forEach(file => { dataTransfer.items.add(file); });
+                    console.log(dataTransfer.files);
+                    new_images.value='';
+                    new_images = dataTransfer;
+                    break;
+                }
+            }
+            t.parentNode.removeChild(t);
+            document.getElementById('image_count').innerText='사진 '+image_names.length+'개';
+        }
         function getImageFiles(e){
-            const uploadFiles = [];
             const files = e.currentTarget.files;
-            const imagePreview = document.querySelector('.image-preview');
+            const imagePreview = document.querySelector('#image-preview');
 
             [...files].forEach(file => {
-                uploadFiles.push(file);
-
-                const reader = new FileReader();
-                reader.onload = (e) => {
-                    const preview = createElement(e, file);
-                    imagePreview.appendChild(preview);
-                };
-
-              reader.readAsDataURL(file);
+                let check=false;
+                for (i=0;i<image_names.length;i=i+1)
+                {
+                    if (image_names[i].indexOf(file.name) !== -1)
+                    {
+                        check=true;
+                        break;
+                    }
+                }
+                if (check===false)
+                {
+                    new_images.items.add(file);
+                    image_names.push(file.name);
+                    const reader = new FileReader();
+                    reader.onload = (e) => {
+                        const preview = createElement(e, file);
+                        imagePreview.appendChild(preview);
+                    };
+                    reader.readAsDataURL(file);
+                }
             });
+            document.getElementById('image_count').innerText='사진 '+image_names.length+'개';
         }
 
         function createElement(e, file) {
-          const div = document.createElement('div');
+          const divs = document.createElement('div');
           const img = document.createElement('img');
+          divs.style.display='inline-block';
+          divs.style.width='30%';
+          divs.style.height='100%';
+          divs.setAttribute('onClick', 'removeImage("{{image}}".slice(2), this)');
           img.setAttribute('src', e.target.result);
           img.setAttribute('data-file', file.name);
-          div.appendChild(img);
+          divs.appendChild(img);
 
-          return div;
+          return divs;
         }
         var text = '';
         const realUpload = document.querySelector('.real-upload');
@@ -97,7 +136,6 @@
                 });
             }).then((value) => {
                 tmpPoint = new kakao.maps.LatLng(value.lat, value.lng);
-                console.log(tmpPoint);
                 path.push(tmpPoint);
             });
         };
@@ -125,8 +163,18 @@
                     document.getElementById('id_ownerPhone').value= "{{ room.ownerPhone }}"
                 {% endif %}
                 let images = ''
-                {% for img in room.roomImage %}
-                    images += "{{ img }}" // 이미지에 대한 소스코드는 이후 수정 예정
+                {% for image in images %}
+                    console.log('{{image}}'.slice(2));
+                    image_names.push('{{image}}'.slice(2));
+                    divs2 = document.createElement('div');
+                    img2 = document.createElement('img');
+                    divs2.style.display='inline-block';
+                    divs2.style.width='30%';
+                    divs2.style.height='100%';
+                    divs2.setAttribute('onClick', 'removeImage("{{image}}".slice(2), this)');
+                    img2.setAttribute('src', '{% static "images/roomImage/" %}{{image}}');
+                    divs2.appendChild(img2);
+                    document.querySelector('#image-preview').appendChild(divs2);
                 {% endfor %}
                 document.getElementsByClassName('image-preview')[0].innerHTML = images
                 document.getElementById('room_submit').value = '원룸 수정'
