--- a/templates/normal_user_main.html
+++ b/templates/normal_user_main.html
@@ -43,7 +43,7 @@ $(document).ready(function(){
                     {% if popular_review.additionalImage|length > 0 %}
                         <img src="{% static 'images/reviewImage/' %}{{popular_review.additionalImage|first|defaultImage:'review'}}" class="left-side-room-img" style="height:100%;">
                     {% else %}
-                        <img src="{% static 'images/reviewImage/no-photo.png' %}" style="width:100%; height:100%;">
+                        <img src="{% static 'images/reviewImage/no-photo.png' %}" style="height:100%;">
                     {% endif %}
                 </div>
                 {# 클릭시 해당 리뷰로 이동하는 링크 필요 #}
@@ -86,7 +86,11 @@ $(document).ready(function(){
                     <div style = "float:right; height:100%;">추천 수 : {{ latest_review.recommendedOn|length }}</div>
                 </div>
                 <div class="pop-img" style="display:flex; justify-content: center; height:25%;">
-                    <img class="left-side-room-img" style="height:100%;" src="{% static 'images/reviewImage/' %}{{latest_review.additionalImage|first|defaultImage:'review'}}">
+                    {% if latest_review.additionalImage|length > 0 %}
+                        <img src="{% static 'images/reviewImage/' %}{{latest_review.additionalImage|first|defaultImage:'review'}}" class="left-side-room-img" style="height:100%;">
+                    {% else %}
+                        <img src="{% static 'images/reviewImage/no-photo.png' %}" style="height:100%;">
+                    {% endif %}
                 </div>
                 {# 클릭시 해당 리뷰로 이동하는 링크 필요 #}
                 <div style="text-align:center; color:black; height:10%; font-weight: 600; font-size:20px; cursor:pointer;" onclick="window.location.replace('{{normalUserReviewRead}}?id={{latest_review.id}}')">{{ latest_review.reviewTitle }}</div>
