--- a/templates/normal_user_room_write.html
+++ b/templates/normal_user_room_write.html
@@ -36,11 +36,10 @@
             <div id="tr3">
                 <div style="padding-top: 3.038%; height:20%; width:100%;">
                     <div id="image-preview"></div> {# 업로드한 이미지 띄우는 부분 #}
-                    <div id="current-image-preview"></div> {# 기존 이미지 띄우는 부분 #}
                     <div style="display:flex; justify-content: right; width:100%;">
                         <input style="display:none;" type="file" class="real-upload" accept="image/*" multiple id="images" name="images">
                         <div style="display:inline-block; width:50%;" onclick="document.getElementById('images').click()"><span style="border:1px solid black; padding:1%;">사진 추가</span><span id="image_count" style="width:30%; float:right;">사진 0개</span></div>
-                        <input id="review_submit" value="리뷰 등록" type="submit" style="background-color: #A4A1A1; border-color:#888888;
+                        <input id="room_submit" value="원룸 등록" type="submit" style="background-color: #A4A1A1; border-color:#888888;
                         color: white">
                     </div>
                 </div>
@@ -54,17 +53,22 @@
         var image_names = [];
 
         // 이미지 업로드
-        function removeImage(s, t){
-            image_names = image_names.filter((element) => element !== s);
+        function removeImage(t){
+            current_image_name = null;
+            if (t.childNodes[0].getAttribute('data-file') === null)
+                current_image_name = t.childNodes[0].getAttribute('src').slice(27)
+            else
+                current_image_name = t.childNodes[0].getAttribute('data-file')
+            console.log(current_image_name)
+            image_names = image_names.filter((element) => element !== current_image_name);
             for (i=0;i<new_images.files.length;i++){
-                if (new_images.files[i].name.indexOf(s) !== -1)
+                if (new_images.files[i].name.indexOf(current_image_name) !== -1)
                 {
                     let dataTransfer = new DataTransfer();
                     let files = new_images.files;
                     let fileArray = Array.from(files);
                     fileArray.splice(i, 1);
                     fileArray.forEach(file => { dataTransfer.items.add(file); });
-                    console.log(dataTransfer.files);
                     new_images.value='';
                     new_images = dataTransfer;
                     break;
@@ -108,7 +112,7 @@
           divs.style.display='inline-block';
           divs.style.width='30%';
           divs.style.height='100%';
-          divs.setAttribute('onClick', 'removeImage("{{image}}".slice(2), this)');
+          divs.setAttribute('onClick', 'removeImage(this)');
           img.setAttribute('src', e.target.result);
           img.setAttribute('data-file', file.name);
           divs.appendChild(img);
@@ -171,12 +175,12 @@
                     divs2.style.display='inline-block';
                     divs2.style.width='30%';
                     divs2.style.height='100%';
-                    divs2.setAttribute('onClick', 'removeImage("{{image}}".slice(2), this)');
+                    divs2.setAttribute('onClick', 'removeImage(this)');
                     img2.setAttribute('src', '{% static "images/roomImage/" %}{{image}}');
                     divs2.appendChild(img2);
                     document.querySelector('#image-preview').appendChild(divs2);
                 {% endfor %}
-                document.getElementsByClassName('image-preview')[0].innerHTML = images
+                document.getElementById('image_count').innerText='사진 '+image_names.length+'개';
                 document.getElementById('room_submit').value = '원룸 수정'
             }
         }
