--- a/static/css/normalUserRoomWriteTemplate.css
+++ b/static/css/normalUserRoomWriteTemplate.css
@@ -9,15 +9,19 @@
 #tr2 {
   display: inline-block;
   float: left;
-  height: 100%;
-  width: 60%;
+  height: 79%;
+  width: 58%;
+  border: 2px solid #6c757d;
+  border-collapse: collapse;
+  margin: 1%;
 }
 
 #tr3 {
   display: inline-block;
   float: left;
-  height: 89.39%;
+  height: 100%;
   width: 40%;
+  padding-right: 1%;
 }
 
 img {
@@ -31,10 +35,12 @@ img {
 #image-preview {
   position: relative;
   display: inline-block;
-  width: 49%;
-  height: 100%;
-  overflow-x: scroll;
-  overflow-y: hidden;
+  width: 100%;
+  height: 80%;
+  padding: 2%;
+  border: 2px solid #6c757d;
+  overflow-x: hidden;
+  overflow-y: scroll;
   white-space: nowrap;
 }
 
