--- a/templates/normal_user_room_write.html
+++ b/templates/normal_user_room_write.html
@@ -16,29 +16,29 @@
                     text-align: center; margin: 0 auto" id="postcode">우편번호</div>
             <input id="id_postcode" style="float: right; border-color: #A23355; width:20%; height:100%;" name="postcode" required>
         </div>
-        <div style="height:90%; width:100%; position:relative;">
+        <div style="height:88%; width:100%; position:relative;">
             <div id="tr2">
-                <div style ="width:48%; height:100%; display: inline-block;float:left;">
-                    <div style ="width:100%;height:45%;display: inline-block;">
+                <div style ="width:100%; height:100%; display: inline-block;float:left;">
+                    <div style ="width:100%;height:40%;display: inline-block;">
                         <span style ="margin-left:1%;font-weight: 700; font-size:25px;">원룸 정보</span>
-                        <br><label style ="margin-top:2.5%;margin-left: 5%;width:20%;"><input id="commonInfo0" type="checkbox" name = "commonInfo" style="margin-right:5%;">주차장</label>
+                        <br><label style ="margin-top:2.5%;margin-left: 5%;width:45%;"><input id="commonInfo0" type="checkbox" name = "commonInfo" style="margin-right:5%;">주차장</label>
                         <label style ="width:40%;margin-left: 2.5%;"><input type="checkbox" id="commonInfo1"  name = "commonInfo" style="margin-right:5%;">엘레베이터</label>
                         <br><label style ="width:100%;margin-left: 2.5%;margin-top:2.5%;">원룸 이름 &nbsp; <input id="id_name" name="name" style="height:25px;" type ="text"></label>
                         <br><label style ="width:100%;margin-left: 2.5%;margin-top:2.5%;">건축 연도 &nbsp; <input id="id_builtYear" name="builtYear" style ="width:20%;height:25px;text-align: center;"type="number" minlength="1900" maxlength="2022" >&nbsp;년도</label>
                         <br><label style ="width:100%;margin-left: 2.5%;margin-top:2.5%;">건물 높이 &nbsp; <input id="id_buildingFloorNum" name="buildingFloorNum" style ="width:15%;height:25px;text-align: center;"type ="number" minlength="-1" maxlength="10">&nbsp;층</label>
                     </div>
-                    <div style ="width:100%;height:55%;">
+                    <div style ="width:100%;height:50%;">
                         <span style ="margin-left:1%;font-weight: 700; font-size:25px; display: inline-block;">임대인 정보</span>
                         <br><label style ="width:100%;margin-left: 2.5%;margin-top:2.5%;">연락처 &nbsp;<input id="id_ownerPhone" name="ownerPhone" style =" margin-left:3%;width:40%; height:25px;text-align: center;"type ="tel"></label>
                     </div>
                 </div>
             </div>
             <div id="tr3">
-                <div style="padding-top: 3.038%; height:20%; width:100%;">
+                <div style="padding-top: 3.038%; height:100%; width:100%;">
                     <div id="image-preview"></div> {# 업로드한 이미지 띄우는 부분 #}
                     <div style="display:flex; justify-content: right; width:100%;">
                         <input style="display:none;" type="file" class="real-upload" accept="image/*" multiple id="images" name="images">
-                        <div style="display:inline-block; width:50%;" onclick="document.getElementById('images').click()"><span style="border:1px solid black; padding:1%;">사진 추가</span><span id="image_count" style="width:30%; float:right;">사진 0개</span></div>
+                        <div style="display:inline-block; width:70%;" onclick="document.getElementById('images').click()"><span style="border:1px solid black; padding:1%;">사진 추가</span><span id="image_count" style="width:30%; float:right;">사진 0개</span></div>
                         <input id="room_submit" value="원룸 등록" type="submit" style="background-color: #A4A1A1; border-color:#888888;
                         color: white">
                     </div>
@@ -107,15 +107,17 @@
         }
 
         function createElement(e, file) {
-          const divs = document.createElement('div');
-          const img = document.createElement('img');
-          divs.style.display='inline-block';
-          divs.style.width='30%';
-          divs.style.height='100%';
-          divs.setAttribute('onClick', 'removeImage(this)');
-          img.setAttribute('src', e.target.result);
-          img.setAttribute('data-file', file.name);
-          divs.appendChild(img);
+            const divs = document.createElement('div');
+            const img = document.createElement('img');
+            divs.style.display='inline-block';
+            divs.style.float='left';
+            divs.style.width='33%';
+            divs.style.height='20%';
+            divs.style.marginBottom='2%';
+            divs.setAttribute('onClick', 'removeImage(this)');
+            img.setAttribute('src', e.target.result);
+            img.setAttribute('data-file', file.name);
+            divs.appendChild(img);
 
           return divs;
         }
@@ -173,8 +175,10 @@
                     divs2 = document.createElement('div');
                     img2 = document.createElement('img');
                     divs2.style.display='inline-block';
-                    divs2.style.width='30%';
-                    divs2.style.height='100%';
+                    divs2.style.float='left';
+                    divs2.style.width='33%';
+                    divs2.style.height='20%';
+                    divs2.style.marginBottom='2%';
                     divs2.setAttribute('onClick', 'removeImage(this)');
                     img2.setAttribute('src', '{% static "images/roomImage/" %}{{image}}');
                     divs2.appendChild(img2);
