필요 없는 js라이브러리 삭제, 소개 페이지 url 지운 거 되돌림, 마이페이지 정렬 수정

--- a/templates/normal_user_main.html
+++ b/templates/normal_user_main.html
@@ -197,7 +197,7 @@ $(document).ready(function(){
                     });
 
                     var room_info = ''
-                    if(value.name !== null)
+                    if(value.name !== null && value.name !== '')
                         room_info = value.name
                     else
                         room_info = value.address
