--- a/templates/base.html
+++ b/templates/base.html
@@ -56,6 +56,12 @@
     </div>
     <div id="bottomInfoBox">
         <!-이 공간은 팀 정보를 저장하기 위한 공간입니다.-->
+        <div style="display:flex; color:yellow; align-items: center; justify-content:center; width:100%; height:100%;">
+            <div>
+                <span>django 관련 기초 정보는 다음 링크를 참조해주시기 바랍니다.</span>
+                <a style="text-decoration:none; color:#A23355;" href="https://blog.naver.com/adfsfsf">개발자 블로그</a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
